Works on Desktop again

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         </div>
         <div id="main">
             <div>
-                <a href="https://brawlingtag.bucketlounge.tk">Home </a>
-                <a style="margin-left: 30%;" href="https://bucketlounge.tk">Main </a>
-                <a style="margin-left: 33%;" href="https://example.com">Foo</a>
+                <a id="Home" href="https://brawlingtag.bucketlounge.tk">Home </a>
+                <a id="Main" href="https://bucketlounge.tk">Main </a>
+                <a id="Foo" href="https://example.com">Foo</a>
             </div>
         </div>
     </body>
