--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>BrawlingTag.com</title>
     <link name="stylesheet" rel="stylesheet" href="style.css" type="text/css">
-    <meta name="viewport" content="width=device-with, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="only screen and (max-device-width: 480px)"
         href="mobile-stylesheet.css" />
 </head>
@@ -18,6 +18,12 @@
             <a href="https://bucketlounge.tk/docs.html">Docs</a>
             <a href="https://bucketlounge.tk/ToS/">ToS</a>
         </div>
+    </div>
+    <div id="address-block">
+        <div id="address">Send money to: <br>49QVPSpExJBSQCwcfqtF9UcCvDYcs5pA2f2wBe74X9L6<br>JmrPNVC8H1ufJJMbwBstZDEWtjRNCbhQJZvxnaEm2VVoBhoSaoe</div>
+    </div>
+    <div id="address-qrcode">
+        <img src="https://cdn.discordapp.com/attachments/689541947626618952/924255720386478100/qr_code_monero.png">
     </div>
     <div id="main">
         <div>
